--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-url: https://zackwong.github.io
+url: https://zhangbibi1210.github.io
 
-title: Select Web
+title: 小猪佩奇
 
 keywords: 顺德SEO,顺德网站建设,顺德网站推广,顺德网络营销
 
